можно добавлять, редактировать, удалять вакансии/резюме

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,8 +19,8 @@
         </ul>
         Тут надо лого хуёго регион и так далее и так далее
         <ul>
-            <li><a href="/vacancy">Вакансии</a></li>
-            <li><a href="/rezume">Резюме</a></li>
+            <li><a href="/jobs">Вакансии</a></li>
+            <li><a href="/resumes">Резюме</a></li>
         </ul>
         </nav>
     </header>
