1. Можно загружать картинки в резюме/вакансию 2. Пользователи видят вакансии только для своего региона. Если создавать вакансию, она соответствует региону который пользователь выбрал при регистрации 3. Каждый пользователь видит только своё резюме

--- a/static/styles.css
+++ b/static/styles.css
@@ -183,4 +183,18 @@ main {
 }
 
 
+.resume-box {
+    border: 1px solid #ccc;
+    padding: 10px;
+    margin-bottom: 10px;
+    /* Другие стили по вашему выбору */
+}
 
+/* Добавьте стили для обеспечения единообразного вида изображений */
+.resume-image {
+    max-width: 10%; /* Сделать изображение адаптивным */
+    height: auto; /* Поддерживать пропорции */
+    display: block; /* Избежать отступов снизу */
+    margin: auto; /* Центрирование по горизонтали */
+    margin-bottom: 15px; /* Отступ снизу от изображения */
+}
