--- a/templates/create_job.html
+++ b/templates/create_job.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   <h2>Create a New Job</h2>
-      <form method="post" action="{{ url_for('job.create_job') }}">
+  <form method="post" action="{{ url_for('job.create_job') }}" enctype="multipart/form-data">
     <label for="title">Title:</label>
     <input type="text" name="title" required><br>
 
@@ -11,6 +11,10 @@
 
     <label for="requirements">Requirements:</label>
     <textarea name="requirements" required></textarea><br>
+
+    <!-- Добавляем поле для загрузки файла -->
+    <label for="image_file">Job Image:</label>
+    <input type="file" name="image_file" id="image_file" accept="image/*"><br>
 
     <button type="submit">Create Job</button>
   </form>
