--- a/templates/edit_job.html
+++ b/templates/edit_job.html
@@ -7,7 +7,7 @@
 {% block content %}
     <h1>Edit Job - {{ job.title }}</h1>
 
-    <form method="post" action="{{ url_for('job.edit_job', job_id=job.id) }}">
+    <form method="post" action="{{ url_for('job.edit_job', job_id=job.id) }}" enctype="multipart/form-data">
         <label for="title">Title:</label>
         <input type="text" name="title" value="{{ job.title }}" required><br>
 
@@ -16,6 +16,14 @@
 
         <label for="requirements">Requirements:</label>
         <textarea name="requirements" required>{{ job.requirements }}</textarea><br>
+
+        <!-- Добавлено поле для загрузки изображения -->
+        <label for="image_file">Image:</label>
+        <input type="file" name="image_file">
+        {% if job.image_filename %}
+            <img src="{{ url_for('static', filename='img/job_uploads/' + job.image_filename) }}" alt="{{ job.title }} Image" style="max-width: 100%; height: auto;">
+        {% endif %}
+        <br>
 
         <button type="submit">Save Changes</button>
     </form>
