--- a/templates/edit_resume.html
+++ b/templates/edit_resume.html
@@ -1,21 +1,38 @@
+<!-- edit_resume.html -->
+
 {% extends "base.html" %}
 
-{% block title %}Редактирование резюме{% endblock %}
+{% block title %}Edit Resume - {{ resume.title }}{% endblock %}
 
 {% block content %}
-    <h1>Редактирование резюме</h1>
+    <h1>Edit Resume</h1>
 
-    <form method="post" action="{{ url_for('resume.edit_resume', resume_id=resume.id) }}">
-        <label for="title">Заголовок:</label>
-        <input type="text" id="title" name="title" value="{{ resume.title }}" required>
+    <form method="post" action="{{ url_for('resume.edit_resume', resume_id=resume.id) }}" enctype="multipart/form-data">
+        <label for="title">Title:</label>
+        <input type="text" name="title" value="{{ resume.title }}" required><br>
+
+        <label for="description">Description:</label>
+        <textarea name="description" required>{{ resume.description }}</textarea><br>
+
+        <label for="skills">Skills:</label>
+        <input type="text" name="skills" value="{{ resume.skills }}" required><br>
+
+        <!-- Поле для загрузки нового изображения -->
+        <label for="new_image_file">New Image:</label>
+        <input type="file" name="new_image_file" id="new_image_file" style="display: none;" onchange="updateFileName()">
+        <button type="button" class="file-upload-btn" onclick="document.getElementById('new_image_file').click()">Choose File</button>
+        <span id="file-name"></span>
         <br>
-        <label for="description">Описание:</label>
-        <textarea id="description" name="description" required>{{ resume.description }}</textarea>
-        <br>
-        <label for="skills">Навыки:</label>
-        <input type="text" id="skills" name="skills" value="{{ resume.skills }}" required>
-        <br>
-        <!-- Добавьте другие поля, если необходимо -->
-        <button type="submit">Сохранить изменения</button>
+
+        <button type="submit">Save Changes</button>
     </form>
+
+    <a href="{{ url_for('forum.resumes') }}">Cancel</a>
+
+    <script>
+        function updateFileName() {
+            var fileName = document.getElementById('new_image_file').value.split('\\').pop();
+            document.getElementById('file-name').innerText = fileName;
+        }
+    </script>
 {% endblock %}
