--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@
 {% block content %}
     <div class="login-page">
         <div class="login-container">
-            <h2>Вход</h2>
+            <h2 class = "sign_in_up">Вход</h2>
             <form method="POST">
                 {{ form.csrf_token }}
                 <div class="form-group">
