--- a/templates/register.html
+++ b/templates/register.html
@@ -19,7 +19,7 @@
                     <label for="{{ form.age.id }}">Возраст:</label>
                     {{ form.age }}
                 </div>
-                <div class="form-group">
+                <div class="for_region_selection">
                     <label for="{{ form.region.id }}">Регион:</label>
                     {{ form.region }}
                 </div>
