--- a/static/styles.css
+++ b/static/styles.css
@@ -243,11 +243,11 @@ main {
 }
 
 .for_region_selection {
-    color : #ffffff;
     box-sizing:border-box;
     width:100%;
     border: 5px solid #32213b;
     border-radius : 25px;
+    padding : 15px;
 }
 
 
