--- a/templates/jobs.html
+++ b/templates/jobs.html
@@ -1,5 +1,3 @@
-<!-- jobs.html -->
-
 {% extends "base.html" %}
 
 {% block title %}Главное меню{% endblock %}
@@ -20,18 +18,47 @@
             margin: auto;
             margin-bottom: 10px;
         }
+
+        .form-group {
+            margin-bottom: 15px;
+        }
+
+        label {
+            display: block;
+            margin-bottom: 5px;
+        }
+
+        select.form-control {
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 10px;
+            box-sizing: border-box;
+        }
+
+        button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 15px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
     </style>
 
     <h1>Тут будут вакансии!</h1>
 
-    {% if current_user.is_authenticated %}  {# Проверяем, залогинен ли текущий пользователь #}
+    {% if current_user.is_authenticated %}
         <a href="{{ url_for('job.create_job') }}">Create a Job</a>
     {% else %}
-        {# Если пользователь анонимный, показываем форму для выбора региона #}
-        <form class = "for_region_selection" method="POST" action="{{ url_for('forum.jobs') }}">
+        <form method="POST" action="{{ url_for('forum.jobs') }}">
             {{ form.hidden_tag() }}
-            {{ form.region.label }} {{ form.region(size=32) }}
-            {{ form.submit() }}
+            <div class="form-group">
+                <label for="{{ form.region.id }}">Выберите регион:</label>
+                {{ form.region(class="form-control") }}
+            </div>
+            <div class="form-group">
+                {{ form.submit }}
+            </div>
         </form>
     {% endif %}
 
@@ -49,7 +76,7 @@
 
                         <a href="{{ url_for('job.show_job', job_id=job.id) }}">Подробнее</a>
 
-                        {% if current_user.is_authenticated and job.author == current_user %}  {# Проверяем, является ли текущий пользователь автором #}
+                        {% if current_user.is_authenticated and job.author == current_user %}
                             <a href="{{ url_for('job.edit_job', job_id=job.id) }}">Edit</a>
                             <a href="{{ url_for('job.delete_job', job_id=job.id) }}">Delete</a>
                         {% endif %}
