--- a/templates/region_selection.html
+++ b/templates/region_selection.html
@@ -5,10 +5,17 @@
 {% block title %}Select Region{% endblock %}
 
 {% block content %}
-  <form method="POST" class = "form-delation1" action="{{ url_for('forum.jobs') }}">
-    {{ form.hidden_tag() }}
-    <div class="form-delation2">{{ form.region.label }}</div>
-    <div class = "for_region_selection">{{ form.region(size=32) }} </div>
-    {{ form.submit() }}
-  </form>
+  <h2>Select Region</h2>
+   <div class="form-container">
+            <form method="POST" action="{{ url_for('forum.jobs') }}">
+                {{ form.hidden_tag() }}
+                <div class="form-group">
+                    <label for="{{ form.region.id }}">Выберите регион:</label>
+                    {{ form.region(class="for_region_selection") }} {# Добавляем класс form-control для стилизации #}
+                </div>
+                <div class="form-group">
+                    {{ form.submit }}
+                </div>
+            </form>
+        </div>
 {% endblock %}
