--- a/templates/jobs.html
+++ b/templates/jobs.html
@@ -54,7 +54,7 @@
             {{ form.hidden_tag() }}
             <div class="form-group">
                 <label for="{{ form.region.id }}">Выберите регион:</label>
-                {{ form.region(class="form-control") }}
+                {{ form.region(class="for_region_selection") }}
             </div>
             <div class="form-group">
                 {{ form.submit }}
