--- a/templates/index.html
+++ b/templates/index.html
@@ -4,5 +4,6 @@
 
 {% block content %}
     <h1>Добро пожаловать на главную страницу!</h1>
+    <h1>С помощью Work-Searcher вы можете найти любую работу в вашем регионе или добавить вакансию.</h1>
     <!-- здесь можно разместить уникальное содержимое только для этой страницы -->
 {% endblock %}
