--- a/templates/create_job.html
+++ b/templates/create_job.html
@@ -1,5 +1,18 @@
 {% extends 'base.html' %}
 
+<style>
+    .lil {
+    background: #bb6868;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-right: 30px;
+    padding-left: 30px;
+    border-radius : 15px;
+    border: medium solid #9e3a3a;
+}
+
+</style>
+
 {% block content %}
   <h2>Create a New Job</h2>
   <form method="post" action="{{ url_for('job.create_job') }}" enctype="multipart/form-data">
@@ -16,6 +29,6 @@
     <label for="image_file">Job Image:</label>
     <input type="file" name="image_file" id="image_file" accept="image/*"><br>
 
-    <button type="submit">Create Job</button>
+    <button type="submit" class = "lil">Create Job</button>
   </form>
 {% endblock %}
