--- a/static/styles.css
+++ b/static/styles.css
@@ -18,7 +18,9 @@ header, footer {
 
 a {
     text-decoration: none;
-    color: #bb6868; /* Цвет ссылок */
+    color: #ffffff; /* Цвет ссылок */
+    font-size: 150%;
+    padding: 15px;
 }
 
 label {
