--- a/templates/base.html
+++ b/templates/base.html
@@ -15,13 +15,14 @@
             <li><a href="/">Домой</a></li>
             {% if not current_user.is_authenticated %}
                 <li><a href="/login">Войти</a></li>
-                <li><a href="/register">Зарегистрироваться</a></li>
+                <li><a href="/register">Регистрация</a></li>
+                <li><a href="/jobs">Вакансии</a></li>
             {% endif %}
             {% if current_user.is_authenticated %}
                 <li><a href="/logout">Выйти</a></li>
+                <li><a href="/jobs">Вакансии</a></li>
+                <li><a href="/resumes">Резюме</a></li>
             {% endif %}
-            <li><a href="/jobs">Вакансии</a></li>
-            <li><a href="/resumes">Резюме</a></li>
         </ul>
         </nav>
     </header>
