--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block title %}Главное меню{% endblock %}
 
 {% block content %}
-    <h1>Добро пожаловать на главную страницу!</h1>
-    <h1>С помощью Work-Searcher вы можете найти любую работу в вашем регионе или добавить вакансию.</h1>
+    <h1 class = "for_index_info">Добро пожаловать на главную страницу!</h1>
+    <h1 class = "for_index_info">С помощью Work-Searcher вы можете найти любую работу в вашем регионе или добавить вакансию.</h1>
     <!-- здесь можно разместить уникальное содержимое только для этой страницы -->
 {% endblock %}
