Resumes and Jobs

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,5 @@
+<!-- base.html -->
+
 <!DOCTYPE html>
 <html lang="">
 <div class="bg"></div>
@@ -16,12 +18,18 @@
             {% if not current_user.is_authenticated %}
                 <li><a href="/login">Войти</a></li>
                 <li><a href="/register">Регистрация</a></li>
-                <li><a href="/jobs">Вакансии</a></li>
             {% endif %}
             {% if current_user.is_authenticated %}
                 <li><a href="/logout">Выйти</a></li>
-                <li><a href="/jobs">Вакансии</a></li>
-                <li><a href="/resumes">Резюме</a></li>
+
+                {% if current_user.employer_status %} {# Проверка, что пользователь является работодателем #}
+                    <li><a href="/jobs">Вакансии</a></li>
+                {% endif %}
+
+                {% if current_user.employer_status == False %} {# Проверка, что пользователь не работодатель #}
+                    <li><a href="/resumes">Резюме</a></li>
+                {% endif %}
+
             {% endif %}
         </ul>
         </nav>
