--- a/templates/create_job.html
+++ b/templates/create_job.html
@@ -1,34 +1,33 @@
 {% extends 'base.html' %}
 
-<style>
-    .lil {
-    background: #bb6868;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    padding-right: 30px;
-    padding-left: 30px;
-    border-radius : 15px;
-    border: medium solid #9e3a3a;
-}
-
-</style>
-
 {% block content %}
-  <h2>Create a New Job</h2>
-  <form method="post" action="{{ url_for('job.create_job') }}" enctype="multipart/form-data">
-    <label for="title">Title:</label>
-    <input type="text" name="title" required><br>
+    <style>
+            .lil {
+                background: #bb6868;
+                padding-top: 15px;
+                padding-bottom: 15px;
+                padding-right: 30px;
+                padding-left: 30px;
+                border-radius: 15px;
+                border: medium solid #9e3a3a;
+            }
+    </style>
 
-    <label for="description">Description:</label>
-    <textarea name="description" required></textarea><br>
+    <h2>Создание новой вакансии</h2>
+    <form method="post" action="{{ url_for('job.create_job') }}" enctype="multipart/form-data">
+        <label for="title">Название:</label>
+        <input type="text" name="title" required><br>
 
-    <label for="requirements">Requirements:</label>
-    <textarea name="requirements" required></textarea><br>
+        <label for="description">Описание:</label>
+        <textarea name="description" required></textarea><br>
 
-    <!-- Добавляем поле для загрузки файла -->
-    <label for="image_file">Job Image:</label>
-    <input type="file" name="image_file" id="image_file" accept="image/*"><br>
+        <label for="requirements">Требования:</label>
+        <textarea name="requirements" required></textarea><br>
 
-    <button type="submit" class = "lil">Create Job</button>
-  </form>
+        <!-- Добавляем поле для загрузки файла -->
+        <label for="image_file">Изображение вакансии:</label>
+        <input type="file" name="image_file" id="image_file" accept="image/*"><br>
+
+        <button type="submit" class="lil">Создать вакансию</button>
+    </form>
 {% endblock %}
