--- a/templates/resumes.html
+++ b/templates/resumes.html
@@ -7,11 +7,14 @@
 {% block content %}
     <h1>Список резюме</h1>
 
-    <a href="{{ url_for('resume.create_resume') }}">Создать новое резюме</a>
-    <p></p>
+    {% if current_user.is_authenticated and not current_user.employer_status %}
+        <a href="{{ url_for('resume.create_resume') }}">Создать новое резюме</a>
+        <p></p>
+    {% endif %}
 
     {% for resume in resumes %}
         <div class="resume-box">
+
             <h2>{{ resume.title }}</h2>
             <p>{{ resume.skills }}</p>
 
@@ -19,10 +22,13 @@
             {% if resume.image_filename %}
                 <img src="{{ url_for('static', filename='img/resume_uploads/' + resume.image_filename) }}" alt="{{ resume.title }} Image" class="resume-image">
             {% endif %}
-
+            <p><strong>Статус:</strong> {% if resume.status %}Одобрено{% else %}Неодобрено{% endif %}</p>
             <a href="{{ url_for('resume.detail_resume', resume_id=resume.id) }}">Подробнее</a>
-            <a href="{{ url_for('resume.edit_resume', resume_id=resume.id) }}">Редактировать</a>
-            <a href="{{ url_for('resume.delete_resume', resume_id=resume.id) }}">Удалить</a>
+
+            {% if current_user.is_authenticated and not current_user.employer_status %}
+                <a href="{{ url_for('resume.edit_resume', resume_id=resume.id) }}">Редактировать</a>
+                <a href="{{ url_for('resume.delete_resume', resume_id=resume.id) }}">Удалить</a>
+            {% endif %}
         </div>
         <hr>
     {% endfor %}
